 + Fix: tabs are measured with the correct amount of width for the user's settings
 + Fix: virtual whitespace toggling works when the config initially diabled virtual whitespace
 + Fix: never miss the most recent post to the clipboard on windows
 + Fix: command `load_theme_current_buffer` gaurds against destroying the active color palette when bad files are loaded

4.1.3
 + Unkillable buffer setting
 + UI elements in listers and buttons can have different highlight backgrounds
 + command 'load_theme_current_buffer' for loading the current file as a theme and setting it as the theme
 + command 'write_block' for writing a block comment uses mark and cursor range to insert block comment ends
 + Fix: search and replace never exits early
 + Fix: optimized builds of the custom layer display the dirty * on the file bar correclty
 + Fix: can merge "backwards" strings in the history correctly
 + Fix: the helper user_list_definition_array matches both LF and CRLF line endings
 + Fix: line number background and text colors in the built in theme files
 + Fix: a drive letter by itself is recognized as an existing path
 + Fix: the margin colors for panels are determined by the margins in theme files
 + Fix: when a file is deleted outside of 4coder, the '!' dirty status is added to the buffer
 + Fix: on mac file changes outside of 4coder are detected and do not stall the UI
 + Fix: in virtual whitespace layouts blank lines correctly mark carriage return characters before newline characters
 + Fix: auto-indentation leaves the carriage return in CRLF line endings in place and does not count them as indentation
 + Fix: lexer emit pointer advances correctly when the output buffer becomes full
 + Fix: when include gaurds are inserted into new header files, the generated name isn't killed by numbers or underscores
 + Fix: base library function string_is_integer returns false on empty string
 + Fix: preprocessor directives after incomplete statements are aligned to zero by auto-indent